--- a/index.html
+++ b/index.html
@@ -16,7 +16,26 @@
 
 <body>
 
+  <header>
+    <div class="nav">
+      <h2>Fun Bus</h2>
+      <div class="nav-items">
+        <a href= " "><p>Home</p></a>
+        <a href= " "><p>About Us</p></a>
+        <a href= " "><p>Blog</p></a>
+        <a href= " "><p>Contact</p></a>
+      </div>
+    </div>
+    <div class="header_border"></div>
+    <img src="img/fun-bus.jpg">
+    <div class="text-description">
+      <h2>Welcome to Fun Bus!</h2>
+      <p>Traveling expeditoin modern, clean webdesign blogger clean website theme website modern. design pretty design, travelblogger adventure Wordpress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p> 
+      
+      <div class="header_border"></div>
+    </div>
   
+  </header>
      
   <div class="container home">
    
@@ -51,17 +70,17 @@
       <div class="destination">
         <h4>Fun In The Sun</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
+        <div class="btn"><p>Sign me Up!</p></div>
       </div>
       <div class="destination">
         <h4>Mountain Excursion</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
+        <div class="btn"><p>Sign me Up!</p></div>
       </div>
       <div class="destination">
         <h4>Island Getaway</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
+        <div class="btn"><p>Sign me Up!</p></div>
       </div>
     </section>
   </div><!-- container -->
