added fill in form for stretch goals

--- a/index.html
+++ b/index.html
@@ -85,6 +85,30 @@
     </section>
   </div><!-- container -->
 
+  <header>
+      <div class="nav">
+  <div class="text-description">
+      <h2>I'd love to learn more!</h2>
+      <p>Fill out your information down below and we'll reach out to answer any questions you may have!</p> 
+      
+      <div class="header_border"></div>
+    </div>
+  </div>
+  </header>
+  <section class="form">
+    <p>Name</p><input type="text" name="firstname" class="input1">
+  </section>
+
+  <section class="form">
+      <p>Email</p><input type="text" name="firstname" class="input1">
+    </section>
+
+
+  <section class="form">
+      <p>Destinations</p><input type="text" name="firstname" class="input2">
+    </section>
+
+
   <footer class="footer">
     <p>Copyright Fun Bus 2018</p>
   </footer>
